CRUD of Project and Task completed.

--- a/ProMgt/appsettings.json
+++ b/ProMgt/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=Data\\app.db;Cache=Shared"
+    "DefaultConnection": "DataSource=Data\\app.db;Cache=Shared",
+    "SQLiteConnection": "DataSource=Data\\project.db;Cache=Shared"
   },
   "Logging": {
     "LogLevel": {
