--- a/ProMgt.Client/ProMgt.Client.csproj
+++ b/ProMgt.Client/ProMgt.Client.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Components\Project\" />
     <Folder Include="Infrastructure\Authentication\" />
   </ItemGroup>
 
